i have this going

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/">
+    <link rel="stylesheet" href="./assets/style.css">
     <!-- Compressed CSS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.4/dist/css/foundation.min.css" crossorigin="anonymous">
 
@@ -30,6 +30,21 @@
             <li><input type="search" placeholder="Search"></li>
             <li><button type="button" class="button">Search</button></li>
           </ul>
+        </div>
+      </div>
+    <div class="callout large primary">
+        <div class="row column text-center">
+          <h1>Outdoorsy</h1>
+          <h2 class="subheader">A place to share your life outdoors</h2>
+        </div>
+
+      <div class="card" style="marginTop: 10px; margin width: 300px; padding: 20px; background-color: blueviolet;">
+        <div class="card-divider">
+          <h4>I'm featured</h4>
+        </div>
+        <img src="assets/img/generic/rectangle-1.jpg">
+        <div class="card-section">
+          <p>This card makes use of the card-divider element.</p>
         </div>
       </div>
     
