--- a/apiTest.html
+++ b/apiTest.html
@@ -7,6 +7,6 @@
     <title>api testing</title>
 </head>
 <body>
-    <script src = "./assets/script.js"></script>
+    <script src = "./assets/events.js"></script>
 </body>
 </html>
