--- a/results.html
+++ b/results.html
@@ -9,7 +9,6 @@
         rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.4/dist/css/foundation.min.css"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="./assets/css/jass.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
 
 </head>
@@ -38,8 +37,9 @@
             </div>
         </nav>
 
-        <section class="showcase">
-            <div class="container">
+        <!-- search engine bar -->
+        <aside class="results-showcase">
+            <div class="container-results">
                 <h1 class="text-primary">EventListner Search Engine</h1>
                 <form id="search-form" class="form w-100">
                     <div class="input-group input-group-rounded">
@@ -53,15 +53,25 @@
 
                 <a href="./index.html" class="btn btn-block btn-danger">&larr; Go back.</a>
             </div>
-        </section>
+        </aside>
 
-        <section>
-            <div class="col-12 col-md-9 p-3 text-light">
+        <!-- weather api  -->
+
+
+        <!-- <section class="weather-card">
+            <div class="weather-container">
+                <h2 class="weather-branding">Weather</h2>
+            </div>
+        </section> -->
+
+        <!-- search results -->
+        <aside class="results">
+            <div class="results-container">
                 <h2>Showing results for <span id="result-text"></span></h2>
                 <div id="result-content"></div>
             </div>
             </div>
-        </section>
+        </aside>
 
         <footer>
             <p>EventListner , Copyright &copy;, 2022</p>
