--- a/results.html
+++ b/results.html
@@ -40,16 +40,16 @@
 
         <section class="showcase">
             <div class="container">
-                <h1 class="text-primary">EventListner Search Engine</h1>
-                <form id="search-form" class="form w-100">
+                <h1 class="text-primary">EventListner Search </h1>
+                <!-- <form id="search-form" class="form w-100">
                     <div class="input-group input-group-rounded">
                         <input class="input-group-field" type="search">
                         <div class="input-group-button">
                             <input type="submit" class="button secondary" value="Search" id="search-input"
                                 class="form-input w-100">
                         </div>
-                    </div>
-                </form>
+                    <!-- </div> -->
+                </form> -->
 
                 <a href="./index.html" class="btn btn-block btn-danger">&larr; Go back.</a>
             </div>
@@ -68,6 +68,8 @@
         </footer>
 
         <script src="./assets/js/search.js"></script>
+        <script src="assets/js/weather.js"></script>    <!-- Linked weather.js -->
+        
 </body>
 
 </html>
