Added HTML section to display weather results

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
           <div class="input-group input-group-rounded">
             <input class="input-group-field"  id="search-input"  type="text">
             <div class="input-group-button">
+              <!--Changed name for button besides input-->
               <button type="submit" class="button secondary" value="Search" class="form-input w-100"> Search</button>
             </div>
           </div>
@@ -54,7 +55,10 @@
       <p>EventListner , Copyright &copy;, 2022</p>
     </footer>
 
+<!-- Linked all JS -->
     <script src="./assets/js/getCity.js"></script>
+    <script src="./assets/js/weather.js"></script>
+  
 </body>
 
 </html>
