--- a/results.html
+++ b/results.html
@@ -53,6 +53,11 @@
 
                 <a href="./index.html" class="btn btn-block btn-danger">&larr; Go back.</a>
             </div>
+        </section >
+
+         <!--Created a space to display the weather! Feel free to move around it-->
+        <section class="col-12 col-md-9 p-3 text-light" id="weather">
+            <h2>Local weather <span id="weather-result"></span></h2>
         </section>
 
         <section>
@@ -66,9 +71,10 @@
         <footer>
             <p>EventListner , Copyright &copy;, 2022</p>
         </footer>
-
+<!-- Linked all JS -->
         <script src="./assets/js/search.js"></script>
-        <script src="assets/js/weather.js"></script>    <!-- Linked weather.js -->
+        <script src="./assets/js/getCity.js"></script>
+        <script src="assets/js/weather.js"></script>    
         
 </body>
 
