--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
         const images = [
           'url(./assets/img/denver1.webp)', 
           'url(./assets/img/hockey1.jpeg)',
-          'url(./assets/img/festival4.jpeg)',
-          'url(./assets/img/standup.png)',
-          'url(./assets/img/theater.jpeg)'
+          'url(./assets/img/festival1.jpeg)',
+          'url(./assets/img/theater.jpeg)',
+          'url(./assets/img/showcase3.jpg)'
           
         ]
         const section = document.querySelector('section')
