--- a/results.html
+++ b/results.html
@@ -13,7 +13,8 @@
 
 </head>
 
-<body>
+<body> 
+    <div class="wrapper">
     <header>
         <!-- nav bar used from foundation -->
         <nav class="top-bar topbar-responsive">
@@ -36,6 +37,7 @@
                 </div>
             </div>
         </nav>
+    </header>
 
         <!-- search engine bar -->
         <aside class="results-showcase">
@@ -56,14 +58,6 @@
         </aside>
 
         <!-- weather api  -->
-
-
-        <!-- <section class="weather-card">
-            <div class="weather-container">
-                <h2 class="weather-branding">Weather</h2>
-            </div>
-        </section> -->
-
         <!-- search results -->
         <aside class="results">
             <div class="results-container">
@@ -76,6 +70,8 @@
         <footer>
             <p>EventListner , Copyright &copy;, 2022</p>
         </footer>
+       </div>
+    </div>
 
         <script src="./assets/js/search.js"></script>
 </body>
