--- a/results.html
+++ b/results.html
@@ -41,15 +41,15 @@
         <section class="showcase">
             <div class="container">
                 <h1 class="text-primary">EventListner Search </h1>
-                <!-- <form id="search-form" class="form w-100">
+               <form id="search-form" class="form w-100">
                     <div class="input-group input-group-rounded">
                         <input class="input-group-field" type="search">
                         <div class="input-group-button">
                             <input type="submit" class="button secondary" value="Search" id="search-input"
                                 class="form-input w-100">
                         </div>
-                    <!-- </div> -->
-                </form> -->
+                    </div> 
+                </form> 
 
                 <a href="./index.html" class="btn btn-block btn-danger">&larr; Go back.</a>
             </div>
@@ -57,7 +57,8 @@
 
          <!--Created a space to display the weather! Feel free to move around it-->
         <section class="col-12 col-md-9 p-3 text-light" id="weather">
-            <h2>Local weather <span id="weather-result"></span></h2>
+            <h2 id="weather-text"></h2> 
+            <span id="weather-result"></span>
         </section>
 
         <section>
@@ -72,7 +73,6 @@
             <p>EventListner , Copyright &copy;, 2022</p>
         </footer>
 <!-- Linked all JS -->
-        <script src="./assets/js/search.js"></script>
         <script src="./assets/js/getCity.js"></script>
         <script src="assets/js/weather.js"></script>    
         
