committing before main pull

--- a/apiTest.html
+++ b/apiTest.html
@@ -10,7 +10,7 @@
 <body>
     <input id="search" type="text">
     <section id="results"></section>
-    <script src="./assets/events.js"></script>
+    <script src="./assets/js/events.js"></script>
 </body>
 
 </html>
