--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>EventListner | Welcome</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/css/uikit.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400&family=Merriweather:wght@700&display=swap"
     rel="stylesheet" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.4/dist/css/foundation.min.css"
@@ -66,7 +67,7 @@
         section.style.backgroundImage = bg;
       }
 
-      setInterval(changeBg, 1000)
+      setInterval(changeBg, 5000)
     </script>
     <!-- <footer>
       <p>EventListner , Copyright &copy;, 2022</p>
