--- a/results.html
+++ b/results.html
@@ -77,9 +77,12 @@
         </footer>
 
 <!-- Linked all JS -->
-        <script src="./assets/js/getCity.js"></script>
-        <script src="assets/js/weather.js"></script>    
-        <script src="./assets/js/search.js"></script>
+        <!-- <script src="./assets/js/getCity.js"></script> -->
+        <script src="./assets/js/weather.js"></script>    
+        <script src="./assets/js/events.js"></script>
+        <!-- <script src="./assets/js/search.js"></script> -->
+
+
 
 </body>
 
