script.js attached to results.html as well

--- a/results.html
+++ b/results.html
@@ -78,6 +78,8 @@
 
 <!-- Linked all JS -->
         <!-- <script src="./assets/js/getCity.js"></script> -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.2/moment.min.js"></script>
+        <script src="./assets/js/script.js"></script>
         <script src="./assets/js/weather.js"></script>    
         <script src="./assets/js/events.js"></script>
         <!-- <script src="./assets/js/search.js"></script> -->
