weather api working with results page

--- a/index.html
+++ b/index.html
@@ -2,116 +2,139 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EventListner | Welcome</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.4/dist/css/foundation.min.css"
-        crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=BIZ+UDGothic:wght@400;700&family=Roboto:wght@100&family=Yuji+Boku&display=swap"
-        rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>EventListner | Welcome</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.4/dist/css/foundation.min.css"
+    crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=BIZ+UDGothic:wght@400;700&family=Roboto:wght@100&family=Yuji+Boku&display=swap"
+    rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
 
 
-    <link rel="stylesheet" href="./assets/css/style.css" />
+  <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 
 <body>
-    <header>
-        <!-- Nav bar from foundation -->
-        <nav class="top-bar topbar-responsive">
-            <div class="top-bar-title">
-                <a class="topbar-responsive-logo" href="#"><strong class="branding">EventListner</strong></a>
-            </div>
-            <div id="topbar-responsive" class="topbar-responsive-links">
-                <div class="top-bar-right">
-                    <ul class="menu simple vertical medium-horizontal">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">History</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-
-        <!-- Search Bar Container -->
-        <section class="showcase">
-            <div class="container">
-
-                <h1 class="container-header">Whats the next Event?</h1>
-                <br>
-                <p>Did you hear that? They've shut down the main reactor. We'll be destroyed for sure. This is madness!
-                    We're doomed!</p>
-                <form id="search-form" class="form w-100">
-                    <div class="input-group input-group-rounded">
-                        <input class="input-group-field" id="search-input" type="text">
-                        <div class="input-group-button">
-                            <button type="submit" class="button secondary" value="Search" class="form-input w-100"> Search</button>
-                        </div>
-                    </div>
-                </form>
-        </section>
-        <!-- Animated Carousel Container -->
-    <section>
-        <div class="slideshow-container">
-
-            <div class="mySlides fade">
-                <img src="./assets/img/hockey1.jpeg" style="width:100%">
-
-            </div>
-
-            <div class="mySlides fade">
-                <img src="./assets/img/festival1.jpeg" style="width:100%">
-
-            </div>
-
-            <div class="mySlides fade">
-                <img src="./assets/img/showcase3.jpg" style="width:100%">
-
-            </div>
-
-            <div class="mySlides fade">
-                <img src="./assets/img/denver1.webp" style="width:100%">
-
-            </div>
-            <div class="mySlides fade">
-                <img src="./assets/img/theater.jpeg" style="width:100%">
-
-            </div>
-            <div class="mySlides fade">
-                <img src="./assets/img/festival4.jpeg" style="width:100%">
-
-            </div>
-
+  <header>
+    <!-- Nav bar from foundation -->
+    <nav class="top-bar topbar-responsive">
+      <div class="top-bar-title">
+        <a class="topbar-responsive-logo" href="#"><strong class="branding">EventListner</strong></a>
+      </div>
+      <div id="topbar-responsive" class="topbar-responsive-links">
+        <div class="top-bar-right">
+          <ul class="menu simple vertical medium-horizontal">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">History</a></li>
+          </ul>
         </div>
+      </div>
+    </nav>
+
+    <!-- Search Bar Container -->
+    <section class="showcase">
+      <div class="container">
+
+        <h1 class="container-header">Whats the next Event?</h1>
         <br>
-        <div style="text-align:center">
-            <span class="dot"></span>
-            <span class="dot"></span>
-            <span class="dot"></span>
-            <span class="dot"></span>
-            <span class="dot"></span>
-            <span class="dot"></span>
+        <p>Did you hear that? They've shut down the main reactor. We'll be destroyed for sure. This is madness!
+          We're doomed!</p>
+        <form id="search-form" class="form w-100">
+          <div class="input-group input-group-rounded">
+            <input class="input-group-field" id="search-input" type="text">
+            <div class="input-group-button">
+              <button type="submit" class="button secondary" value="Search" class="form-input w-100"> Search</button>
+            </div>
+          </div>
+        </form>
+    </section>
+    <!-- Animated Carousel Container -->
+    <section>
+      <div class="slideshow-container">
+
+        <div class="mySlides fade">
+          <img src="./assets/img/hockey1.jpeg" style="width:100%">
 
         </div>
+
+        <div class="mySlides fade">
+          <img src="./assets/img/festival1.jpeg" style="width:100%">
+
+        </div>
+
+        <div class="mySlides fade">
+          <img src="./assets/img/showcase3.jpg" style="width:100%">
+
+        </div>
+
+        <div class="mySlides fade">
+          <img src="./assets/img/denver1.webp" style="width:100%">
+
+        </div>
+        <div class="mySlides fade">
+          <img src="./assets/img/theater.jpeg" style="width:100%">
+
+        </div>
+        <div class="mySlides fade">
+          <img src="./assets/img/festival4.jpeg" style="width:100%">
+
+        </div>
+
+      </div>
+      <br>
+      <div style="text-align:center">
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+
+      </div>
     </section>
 
-        <!-- end of animated carousel -->
+    <!-- end of animated carousel -->
 
-        <!-- footer -->
-        <footer>
-            <p>EventListner , Copyright &copy;, 2022</p>
-        </footer>
+    <!-- footer -->
+    <footer>
+      <p>EventListner , Copyright &copy;, 2022</p>
+    </footer>
 
 
 
-    
-        <script src="./assets/js/script.js"></script>
 
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-            integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="./assets/js/script.js"></script>
+    <script>
+      let slideIndex = 0;
+      showSlides();
+
+      function showSlides() {
+        let i;
+        let slides = document.getElementsByClassName("mySlides");
+        let dots = document.getElementsByClassName("dot");
+        for (i = 0; i < slides.length; i++) {
+          slides[i].style.display = "none";
+        }
+        slideIndex++;
+        if (slideIndex > slides.length) {
+          slideIndex = 1
+        }
+        for (i = 0; i < dots.length; i++) {
+          dots[i].className = dots[i].className.replace(" active", "");
+        }
+        slides[slideIndex - 1].style.display = "block";
+        dots[slideIndex - 1].className += " active";
+        setTimeout(showSlides, 2000);
+      }
+    </script>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
 </body>
 
