--- a/results.html
+++ b/results.html
@@ -43,7 +43,7 @@
                 <h1 class="text-primary">EventListner Search </h1>
                 <form id="search-form" class="form w-100">
                     <div class="input-group input-group-rounded">
-                        <input class="input-group-field" type="search">
+                        <input class="input-group-field" type="search" id="search-input">
                         <div class="input-group-button">
                             <input type="submit" class="button secondary" value="Search" id="search-input"
                                 class="form-input w-100">
@@ -57,8 +57,8 @@
 
         <!--Created a space to display the weather! Feel free to move around it-->
         <section class="col-12 col-md-9 p-3 text-light" id="weather">
-            <h2 id="weather-text"></h2>
-            <span id="weather-result"></span>
+            <h3 id="day-high"></h3>
+            <h3 id="day-low"></h3>
         </section>
 
 
