--- a/results.html
+++ b/results.html
@@ -50,9 +50,9 @@
         </section>
 
         <!--Created a space to display the weather! Feel free to move around it-->
-        <section id="weather">
-            <h2 id="weather-text"></h2>
-            <span id="weather-result"></span>
+        <section class="col-12 col-md-9 p-3 text-light" id="weather">
+            <h3 id="day-high"></h3>
+            <h3 id="day-low"></h3>
         </section>
 
 
