changed index.html star wars quote to a more appropriate one.

--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
 
         <h1 class="container-header">Whats the next Event?</h1>
         <br>
-        <p>Did you hear that? They've shut down the main reactor. We'll be destroyed for sure. This is madness!
-          We're doomed!</p>
+        <p>Enter a city to learn the best events near you!</p>
         <form id="search-form" class="form w-100">
           <div class="input-group input-group-rounded">
             <input class="input-group-field" id="search-input" type="text">
